--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "@types/styled-components": "5.1.25",
+    "@types/testing-library__jest-dom": "5.14.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "jest": "28.1.0",
     "jest-axe": "6.0.0",
